<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Circ Da Cité</string>
    <string name="action_settings">Settings</string>
    <string name="location_list">Locations</string>
    <string name="paths_list">Paths</string>

    <string-array name="path_array">
        <item>To Work</item>
        <item>From Work</item>
        <item>To Dentist</item>
        <item>To Worcester</item>
        <item>To Montreal</item>
        <item>To New York</item>
        <item>From Warwick</item>
    </string-array>

    <string name="title_activity_location">LocationActivity</string>
    <string name="save_button_text">Save</string>
    <string name="locate_map_hint">Go to map to locate</string>
    <string name="some_text">Locations!</string>
    <string name="some_hint">Type here to filter…</string>
    <string name="title_activity_maps">Circ Da Cite Map</string>
    <string name="path_map_hint">Setup path on map</string>
    <string name="title_activity_path">Path</string>
    <string name="name_hint">name</string>
    <string name="address_hint">Address</string>
    <string name="edit_loc_content_description">Edit Location</string>
    <string name="menu_legalnotices">Legal Notices</string>
    <string name="loc_edit_name_hint">Enter Location name</string>
    <string name="clear_map">Clear</string>
    <string name="reset_map">Reset</string>
    <string name="click_to_create_location">Click to create location</string>
    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="map_not_ready">Map is not ready</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="dialog_save_location">Save Location</string>
    <string name="path_map">Paths</string>
    <string name="locations_map">Locations</string>
    <string name="start_of_path">Start of Path</string>
    <string name="add_to_path">Add to Path</string>
    <string name="remove_from_path">Remove from path</string>
    <string name="remove_location">Remove location</string>
    <string name="enter_new_path">Enter path name</string>
    <string-array name="planets_array">
        <item>Make start of path</item>
        <item>Add to path</item>
        <item>Remove from path</item>
        <item>Remove from map</item>
    </string-array>
    <string name="title_activity_x">XActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="path_label">Path:</string>
    <string name="path_name_hint">Path Name</string>
    <string name="start_loc_label">Start:</string>
    <string name="end_loc_label">End:</string>
    <string name="end_loc_hint">End location</string>
    <string name="start_loc_hint">Start location</string>
    <string name="menu_db_dump">DB dump</string>
    <string name="path_list_title">Paths!</string>
    <string name="title_activity_path_list">PathList</string>
    <string name="title_activity_main">Circ Da Cité</string>
    <string name="menu_path_list">Paths List</string>
    <string name="menu_loc_list">Location List</string>
    <string name="hubway_xml_uri">https://www.thehubway.com/data/stations/bikeStations.xml</string>
    <string name="hubway_json_uri">https://www.thehubway.com/data/stations/bikeStations.json</string>
    <string name="menu_calendar">Refresh Calendar</string>

</resources>
