<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.pgnewell.cdc.circdacite.PathMenuFragment">

    <TextView android:id="@android:id/empty" android:layout_width="match_parent"
        android:layout_height="53dp" android:gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_of_path"
        android:id="@+id/start_path_button"
        android:layout_gravity="left|top" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_path"
        android:id="@+id/add_path_button"
        android:layout_gravity="center_horizontal|top" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_from_path"
        android:id="@+id/remove_path_button"
        android:layout_gravity="center_horizontal|top" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_location"
        android:id="@+id/remove_location_button"
        android:layout_gravity="center_horizontal|top" />

</LinearLayout>

