<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pgnewell.cdc.circdacite.ShowPath">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/path_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/path_label"
            android:id="@+id/path_label"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/path_name"
            android:hint="@string/path_name_hint" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/start_loc_label"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/start_loc"
                android:layout_column="1"
                android:hint="@string/start_loc_hint" />

            <fragment
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:name="com.google.android.gms.maps.MapFragment"
                android:id="@+id/start_loc_map"
                android:layout_gravity="right"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/end_loc_label"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/end_loc"
                android:layout_column="1"
                android:hint="@string/end_loc_hint" />

            <fragment
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.gms.maps.MapFragment"
                android:id="@+id/end_loc_map"
                android:layout_gravity="right"
                android:layout_weight="1" />
        </TableRow>

    </TableLayout>

</LinearLayout>
